<resources>
    <string name="app_name">EMigration10</string>
    <string name="PantallaUsuarioTitulo">Datos de Usuario</string>
    <string name="DatosEquipos">Datos de los Equipos</string>
    <string name="txtNombreUsuario">Nombre de Usuario:</string>
    <string name="txtIdUsuario">Id de Usuario:</string>
    <string name="txtEquipoNuevo">Equipo Nuevo:</string>
    <string name="txtEuipoAntiguo" >Equipo Antiguo:</string>
</resources>
